--- a/public/css/site.css
+++ b/public/css/site.css
@@ -36,7 +36,7 @@ ul.arrows {
 ul.arrows li {
   display: list-item;
   margin:20px 0;
-  background:url('/public/packages/khill/lavacharts/images/arrow_bullet.png') no-repeat 0 0;
+  background:url('../images/arrow_bullet.png') no-repeat 0 0;
   padding-left:30px;
 }
 
